--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.0",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
